--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,21 @@
   ],
   "require": {},
   "require-dev": {
-    "phpunit/phpunit": "~5.5"
+    "phpunit/phpunit": "~5.5",
+    "squizlabs/php_codesniffer": "^3.0"
   },
   "autoload": {
     "psr-4": {
       "Swordapp\\Client\\": "src"
     }
+  },
+  "scripts": {
+    "test": [
+      "phpunit --configuration phpunit.xml",
+      "@standards"
+    ],
+    "standards": [
+      "phpcs --standard=phpcs.ruleset.xml src/"
+    ]
   }
 }
